--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -7,6 +7,7 @@
 \usepackage{theorem}
 \usepackage{pst-all}
 \usepackage{algorithmic}
+\usepackage{multicol}
 
 \author{Nic Hollingum - 308193415}
 \title{Thesis working title}
