finishing presentation game theory

--- a/hons/docs/figures/exExamples.tex
+++ b/hons/docs/figures/exExamples.tex
@@ -1,17 +1,42 @@
-\begin{pspicture}(10,6)
+\begin{pspicture}(12,6)
 	
-	\cnode(1,2){0.3}{a3}
-	\cnode(2.5,1){0.3}{a1}
-	\cnode(4,2){0.3}{a4}
-	\cnode(1.5,5){0.3}{a2}
-	\cnode(3.5,5){0.3}{a0}
+	\uput[0](1.2, 0.3){a)}
+	\uput[0](4.7, 0.3){b)}
+	\uput[0](8.7, 0.3){c)}
+	
+	\cnode(1.5, 5){0.3}{x0}
+	\cnode(2.5, 3){0.3}{x1}
+	\cnode(1.5, 1){0.3}{x2}
+	\cnode(0.5, 3){0.3}{x3}
+	
+	\cnode(6,5){0.3}{a0}
+	\cnode(5,1){0.3}{a1}
+	\cnode(4,5){0.3}{a2}
+	\cnode(3.5,2.5){0.3}{a3}
+	\cnode(6.5,2.5){0.3}{a4}
 
-	\cnode(5.5,1.5){0.3}{b5}
-	\cnode(7.5,4.5){0.3}{b6}
-	\cnode(5.5,4.5){0.3}{b7}
-	\cnode(7.5,1.5){0.3}{b8}
-	\cnode(9.5,4.5){0.3}{b9}
-	\cnode(9.5,1.5){0.3}{b10}
+	\cnode(7.5,1.5){0.3}{b5}
+	\cnode(9,4.5){0.3}{b6}
+	\cnode(7.5,4.5){0.3}{b7}
+	\cnode(9,1.5){0.3}{b8}
+	\cnode(10.5,4.5){0.3}{b9}
+	\cnode(10.5,1.5){0.3}{b10}
+	
+	\ncline{->}{x0}{x2}
+	\bput(0.15){2}
+	\bput(0.85){2}
+	\ncline{->}{x0}{x3}
+	\bput(0.15){2}
+	\bput(0.85){1}
+	\ncline{->}{x0}{x1}
+	\aput(0.15){2}
+	\aput(0.85){3}
+	\ncline{->}{x3}{x2}
+	\bput(0.15){1}
+	\bput(0.85){2}
+	\ncline{->}{x1}{x2}
+	\aput(0.15){6}
+	\aput(0.85){4}
 	
 	\ncline{->}{a0}{a2}
 	\bput(0.15){3}
@@ -45,7 +70,7 @@
 	\bput(0.15){1}
 	\bput(0.85){3}
 	\ncline{->}{b6}{b9}
-	\bput(0.15){2}
-	\bput(0.85){2}
+	\aput(0.15){2}
+	\aput(0.85){2}
 	
 \end{pspicture}
