--- a/info5010b/biblio.bib
+++ b/info5010b/biblio.bib
@@ -1,10 +1,21 @@
-@inproceedings{saad2010coalitional,
+@inproceedings{coalition,
   title={Coalitional game theory for security risk management},
   author={Saad, W. and Alpcan, T. and Basar, T. and Hj{\o}rungnes, A.},
   booktitle={The Fifth International Conference on Internet Monitoring and Protection},
   pages={35--40},
   year={2010},
   organization={IEEE}
+}
+
+@article{network,
+  title={Game strategies in network security},
+  author={Lye, K. and Wing, J.M.},
+  journal={International Journal of Information Security},
+  volume={4},
+  number={1},
+  pages={71--86},
+  year={2005},
+  publisher={Springer}
 }
 
 @article{random,
@@ -26,7 +37,7 @@
  keywords = {Decision theory, Game theory, Multiagent systems, Randomized policies, Security},
 } 
 
-@inproceedings{stackleberg,
+@inproceedings{stackelberg,
   title={Playing games for security: an efficient exact algorithm for solving Bayesian Stackelberg games},
   author={Paruchuri, P. and Pearce, J.P. and Marecki, J. and Tambe, M. and Ordonez, F. and Kraus, S.},
   booktitle={Proceedings of the 7th international joint conference on Autonomous agents and multiagent systems-Volume 2},
