--- a/hons/docs/tExperiment.tex
+++ b/hons/docs/tExperiment.tex
@@ -148,6 +148,57 @@ Experimentally, executing five steady states on five machines with probability f
 
 \subsection{Single Version Assignments}
 
+For these experiments we formulate random problem instances with no duplicates, and use our ILP solver (Chapter \ref{chapModel}) and our Heuristic solver (Chapter \ref{chapAlgos}) to perform the assignment.
+The purpose of these experiments is two-fold:
+\begin{itemize}
+	\item We must examine the performance of the heuristic in the general case.
+			These tests are run on randomly generated graphs, whereas the duplication process produces graphs of a distinct kind.
+			The graphs produced are more connected, and the requirement that certain nodes be assigned to different processors forces communication which the heuristic and optimal solverse are able to avoid in the single-assignment case.
+	\item We must have small enough instances to run the optimal solver.
+			In practice the processing requirements for instances larger than 15 nodes exceed reasonable running times (roughly 24 hrs on a Quad-Core i7 1.6ghz).
+			When we duplicate nodes we do so uniformly, so even graphs with as few as 5 nodes can reach the limit of processing time with only 3-way duplication.
+			Tests on duplicated instances will be presented in the next section but these are much smaller than the unduplicated instances shown here.
+\end{itemize}
+
+We generate multiple instances with varying actor count and connectedness, though we keep the number of processors constant.
+Figure \ref{figSTable} shows the assignment costs of the heuristic in comparison with the optimal solution.
+The columns of this table show:
+\begin{itemize}
+	\item {\bf n}: The number of nodes in the problem.
+	\item {\bf c}: The number of instances with $n$ nodes.
+	\item {\bf div}: The number of times the heuristic did not match the optimal assignment.
+	\item {\bf avg opt}: The average cost of optimal assignments.
+	\item {\bf avg heu}: The average cost of heuristic assignments.
+	\item {\bf avg prop}: The average proportion between heuristic and optimal.
+	\item {\bf div opt}: The average cost of optimal assignments where the heuristic assignment was different.
+	\item {\bf div heu}: The average cost of heuristic assignments where the optimal assignment was different.
+	\item {\bf div prop}: The average proportion between heuristic and optimal where the two assignments did not match.
+\end{itemize}
+
+\begin{figure}
+\begin{center}
+	\input{figures/exSingle}
+\caption{Performance of heuristic assignment on no-duplicate problems}
+\label{figSTable}
+\end{center}
+\end{figure}
+
+This experiment shows us an interesting property of the heuristic, it seems to perform more poorly on larger instances.
+In the single assignment case the communication component between actors can be completely ignored by assigning all actors to the same processor.
+Since this significantly reduces the assignment cost, the heuristic and optimal will typically choose this.
+However whereas the optimal is choosing the best processor for all actors, the heuristic is choosing the best processor for the first actor it finds, then assigning all other actors to that processor to avoid communication cost.
+The heuristic can be thought of as choosing an actor at random and assigning all actors to the processor that that actor happens to run best on.
+Unsurprisingly then, the heuristic is unlikely to choose this actor when there are more actors to choose from.
+Thus we see that when we only have 4-5 actors we have suboptimal heuristic assignments 16\%-25\% of the time, when we have 9-10 actors we have 37\%-50\% suboptimal heuristic assignments.
+
+This experiment also shows an interesting property in the degree of suboptimality.
+When we look at only suboptimal assignments, we see that the optimal to heuristic ratio does not necessarily increase with problem size.
+For these experiment communication costs are both random and semi-random (certain computers are on average better), so we would expect little proportional cost increase with problem size.
+The results bear out this conjecture, so we are able to say that although the likelyhood of a suboptimal assignment increases, the suboptimality of these assignments doesnt necessarily increase with problem size.
+
+These experiments are run on problem instances where invocation cost is modelled either totally at random, or where certain machines invoke actors generally at lower cost.
+It is possible to devise pathological cases where the heuristic performs arbitrarily worse than the optimal, however such instances do not capture realistic problems.
+
 \subsection{Multiple Duplicate Assignments}
 
 \section{Assignment Properties}
