working on experiment section

--- a/hons/docs/figures/exOutput.tex
+++ b/hons/docs/figures/exOutput.tex
@@ -1,5 +1,6 @@
 \begin{center}
-    \begin{tabular}{ p{5cm} | p{5cm}}
+    \begin{tabular}{ | p{5cm} | p{5cm} | }
+	\hline
 	\begin{verbatim}
 -- Steady State 0 --
 {4}[0] - 5.083333333333333
@@ -56,5 +57,6 @@
 {8}[2] - 53.25
 {8}[2] - 59.41666666666667
 \end{verbatim}
+\\ \hline
     \end{tabular}
 \end{center}
