--- a/hons/docs/tExperiment.tex
+++ b/hons/docs/tExperiment.tex
@@ -5,13 +5,13 @@
 
 \subsection{Correct Functioning of Mechanisms}
 
-First we must show the correct recovery of the system after thee occurance of a fault.
+First we must show the correct recovery of the system after the occurrence of a fault.
 These are the most basic kinds of experiments and are very controlled.
-Our simulator uses mostly randomly-generated graphs as problem instances, so we devise a simple deterministic invocation behaviour which allows us to determine if the fault-tolerance is working correctly.
+Our simulator uses mostly randomly-generated graphs as problem instances, and we devise a simple deterministic invocation behaviour which allows us to determine if the fault-tolerance is working correctly.
 
 Our simple program works like this:
 \begin{itemize}
-	\item Actors which do not consume from any channels have an internal state.
+	\item If an actor does not have any input channels it remembers an internal state which begins at 0.
 			These actors write the state as a double object for each token, and increment it after each write.
 			So an actor with no input channels and two output channels each producing two tokens per invocation, will write $(0,1)$ on the first channel, then $(2,3)$ on the second, on its first invocation, then $(4, 5)$ and $(6, 7)$ on its second.
 	\item Actors with some inputs and some outputs consume all tokens and average them to determine their state.
@@ -31,24 +31,42 @@ For this experiment we use simple acyclic graphs such as the ones shown in Figur
 \end{figure}
 
 We run the simulator as described in Chapter \ref{chapSystems}.
-For this test we choose a graph with four nodes to be run on five simulated machines over 3 steady state cycles.
+For this test we choose a graph with four nodes (depicted as graph $a$ in Figure \ref{figRGraph}) to be run on five simulated machines over three steady state cycles.
 The output of this program is shown here:
-\begin{multicols}{2}
-\begin{verbatim}
--- Steady State 0 --
-{2} - 5.083333333333333
-{2} - 11.25
-{2} - 17.416666666666668
--- Steady State 1 --
-{2} - 26.083333333333336
-{2} - 32.25
-{2} - 38.41666666666667
--- Steady State 2 --
-{2} - 47.08333333333333
-{2} - 53.25
-{2} - 59.41666666666667
-\end{verbatim}
-\end{multicols}
+
+\begin{center}
+\begin{tabular}{ | p{5cm} p{5cm} | }
+	\hline
+	\begin{verbatim}
+	-- Steady State 0 --
+	{2} - 5.083333333333333
+	{2} - 11.25
+	{2} - 17.416666666666668
+	-- Steady State 1 --
+	{2} - 26.083333333333336
+	{2} - 32.25
+	{2} - 38.41666666666667
+	\end{verbatim}
+	&
+	\begin{verbatim}
+	-- Steady State 2 --
+	{2} - 47.08333333333333
+	{2} - 53.25
+	{2} - 59.41666666666667
+	\end{verbatim}
+	\\ \hline
+\end{tabular}
+\end{center}
+
+\begin{center}
+	\begin{minipage}{0.8\linewidth}
+	%\begin{multicols}{2}
+	\begin{verbatim}
+	\end{verbatim}
+	%\end{multicols}
+	\end{minipage}
+\end{center}
+
 \noindent In each steady state the actor called \verb={2}= is invoked three times, and each time averages the inputs of its tokens to print a result to standard output.
 
 Now we run the simulator on the same graph which is duplicated twice (left) and three times (right) to produce the following:
@@ -56,12 +74,14 @@ Now we run the simulator on the same graph which is duplicated twice (left) and 
 \noindent Note that the actor formerly called \verb={2}= has been duplicated by the actors \verb={4}= and \verb={5}= in the first case, and \verb={6}=, \verb={7}= and \verb={8}= in the second.
 Since these actors are duplicates, the simulator appends their names with an index numbering their order amongst duplicates.
 We can see that the duplicated output is identical to the output for single executions.
-The actors execute in parallel, so the order that machines print to standard out varies.
+The actors execute in parallel using Java Threads, so the order that machines print to standard out varies.
 
 Now that we have our expected output, we will introduce a fault in one of the machines during the second steady state.
 First when the actors are duplicated, using replication FT:
-\begin{multicols}{2}
-\begin{verbatim}
+\begin{center}
+\begin{tabular}{ | p{5cm} p{5cm} | }
+	\hline
+	\begin{verbatim}
 -- Steady State 0 --
 {4}[0] - 5.083333333333333
 {4}[0] - 11.25
@@ -74,6 +94,9 @@ First when the actors are duplicated, using replication FT:
 {5}[1] - 32.25
 {5}[1] - 38.41666666666667
 ## 4> Farewell cruel world!
+	\end{verbatim}
+	&
+	\begin{verbatim}
 -- Steady State 2 --
 processor 4 is dead
 ## Fault Detected
@@ -82,15 +105,20 @@ processor 4 is dead
 {5}[1] - 59.41666666666667
 ## Fault Detected
 ## Fault Detected
-\end{verbatim}
-\end{multicols}
+	\end{verbatim}
+	\\ \hline
+\end{tabular}
+\end{center}
 \noindent Since the processor where the actor called \verb={4}= has faulted, it does not print output, however the other processor executes its actors, which inform the server that they detect faults while trying to communicate with that processor.
 For this test we simply print the detection message to standard output.
 Note the output is still correct.
 
-Next we use recomputation FT on the original (single duplicate) example:
-\begin{multicols}{2}
-\begin{verbatim}-- Steady State 0 --
+Next we use recomputation-based fault-tolerance mechanism on the original (single duplicate) example:
+\begin{center}
+\begin{tabular}{ | p{5cm} p{5cm} | }
+	\hline
+	\begin{verbatim}
+-- Steady State 0 --
 {2} - 5.083333333333333
 {2} - 11.25
 {2} - 17.416666666666668
@@ -107,6 +135,9 @@ machine 2 reloading state 0
 machine 3 reloading state 0
 machine 4 reloading state 0
 Recovery complete
+	\end{verbatim}
+	&
+	\begin{verbatim}
 -- Steady State 1 --
 {2} - 26.083333333333336
 {2} - 32.25
@@ -115,13 +146,16 @@ Recovery complete
 {2} - 47.08333333333333
 {2} - 53.25
 {2} - 59.41666666666667
-\end{verbatim}
-\end{multicols}
+	\end{verbatim}
+	\\ \hline
+\end{tabular}
+\end{center}
 \noindent Under recomputation FT the fault detection immediately begins the recovery process.
 The faulted machine is restarted and the fill-state for each processor is reloaded from disk for all machines.
 Since the last successful steady state was 0, this state is reloaded and recomputation begins again at state 1, even though state 1 was partially completed before the machine faulted.
 
 \subsection{Multiple Failure Experiments}
+\label{secExMultiFail}
 
 We run our SDF programs now under multiple-fault simulations.
 Again these tests are designed to demonstrate the robustness of the FT mechanisms, as such we will for brevity only point out that the simulation goes as expected.
@@ -129,12 +163,15 @@ Since these tests involve failing processors at random, they are run multiple ti
 
 The replication FT mechanism is known to fail when all duplicates of any one actor are on machines which fail.
 In experiments we observe that for few duplicates the probability of failure different from what is expected.
-The estimates in presented in Chapter \ref{chapModel} make the assumption that actors are assigned to processors uniformly at random.
+The estimates presented in Chapter \ref{chapModel} make the assumption that actors are assigned to processors uniformly at random.
 Whilst this simplifies the model, in practice this is seldom true.
 In order to minimise communication costs, processors are typically assigned all actors, or in other words, only as many processors as duplicates are used.
 So long as all the actors are assigned to fewer processors, this affects the probability of failure.
-When processors significantly outnumber actors and the actors are sufficiently spread out, we have to fail most of the processors to be guaranteed of failing one set of duplicates, whereas if the actors are not spread out, only the few processors with actors on them need to be failed.
-When actors significantly outnumber processors this has the effect of improving robustness, since the {\em significant proportion} required is less than the number of processors to which the actors were assigned (typically the number of duplicates).
+
+Consider the problem where we duplicate $n$ actors $d$ times and assign them to $p$ processors, such that we must assign $\binom{p}{d}$ nodes (i.e. $n = \binom{p}{d}/d$).
+When the nodes are randomly assigned, we would expect that every combination of $d$ processors is likely to contain a full set of one actor's duplicates, since there are that many actors.
+This means that the failure of any $d$ processors is likely to cause the entire program to fail.
+Howevr in practice only $d$ processors will be utilised (to reduce the communication cost), so exactly those $d$ processors must fail for the entire program to fail.
 
 The recomputation FT mechanism is guaranteed to terminate correctly no matter how many processors fail.
 However under tests with multiple failures a weakness was exposed for recurring failures.
@@ -146,57 +183,60 @@ Experimentally, executing five steady states on five machines with probability f
 
 \section{Heuristic and Optimal Assignment Costs}
 
-\subsection{Single Version Assignments}
+\subsection{No-Duplication Assignments}
 
 For these experiments we formulate random problem instances with no duplicates, and use our ILP solver (Chapter \ref{chapModel}) and our Heuristic solver (Chapter \ref{chapAlgos}) to perform the assignment.
 The purpose of these experiments is two-fold:
 \begin{itemize}
-	\item We must examine the performance of the heuristic in the general case.
+	\item To examine the performance of the heuristic on more general graphs.
 			These tests are run on randomly generated graphs, whereas the duplication process produces graphs of a distinct kind.
-			The graphs produced are more connected, and the requirement that certain nodes be assigned to different processors forces communication which the heuristic and optimal solverse are able to avoid in the single-assignment case.
-	\item We must have small enough instances to run the optimal solver.
-			In practice the processing requirements for instances larger than 15 nodes exceed reasonable running times (roughly 24 hrs on a Quad-Core i7 1.6ghz).
-			When we duplicate nodes we do so uniformly, so even graphs with as few as 5 nodes can reach the limit of processing time with only 3-way duplication.
-			Tests on duplicated instances will be presented in the next section but these are much smaller than the unduplicated instances shown here.
+			The graphs produced are more connected, and the requirement that certain nodes be assigned to different processors forces communication, which, as we observed in Section \ref{secExMultiFail}, the heuristic and optimal solvers typically avoid in the un-duplicated case.
+	\item To obtain experimental results on stream graphs with a small number of processors.
+			In practice the processing requirements for instances larger than 15 nodes exceed reasonable running times (roughly 24 hrs on a Quad-Core i7 1.6GHz).
+			When we duplicate nodes we do so uniformly, so even graphs with as few as five nodes can reach the limit of processing time with only three-way duplication.
+			Tests on duplicated instances will be presented in the next section but these have typically fewer actors than the no-duplication instances shown here.
 \end{itemize}
+
+%CHEESE Make a diagram showing the difference between a normal instance and a duplicated instance
 
 We generate multiple instances with varying actor count and connectedness, though we keep the number of processors constant.
-Figure \ref{figSTable} shows the assignment costs of the heuristic in comparison with the optimal solution.
+Table \ref{figSTable} shows the assignment costs of the heuristic in comparison with the optimal solution.
 The columns of this table show:
 \begin{itemize}
-	\item {\bf n}: The number of nodes in the problem.
-	\item {\bf c}: The number of instances with $n$ nodes.
+	\item {\bf n}: The number of actors in the problem.
+	\item {\bf c}: The number of instances tested where the random generation produced a graph with $n$ nodes.
 	\item {\bf div}: The number of times the heuristic did not match the optimal assignment.
-	\item {\bf avg opt}: The average cost of optimal assignments.
-	\item {\bf avg heu}: The average cost of heuristic assignments.
-	\item {\bf avg prop}: The average proportion between heuristic and optimal.
-	\item {\bf div opt}: The average cost of optimal assignments where the heuristic assignment was different.
-	\item {\bf div heu}: The average cost of heuristic assignments where the optimal assignment was different.
-	\item {\bf div prop}: The average proportion between heuristic and optimal where the two assignments did not match.
+	\item {\bf Avg Opt}: The average cost of optimal assignments.
+	\item {\bf Avg Heu}: The average cost of heuristic assignments.
+	\item {\bf Avg Prop}: The average proportion between heuristic and optimal.
+	\item {\bf Div Opt}: The average cost of optimal assignments where the heuristic assignment was different.
+	\item {\bf Div Heu}: The average cost of heuristic assignments where the optimal assignment was different.
+	\item {\bf Div Prop}: The average proportion between heuristic and optimal where the two assignments did not match.
 \end{itemize}
 
-\begin{figure}
+\begin{table}
 \begin{center}
 	\input{figures/exSingle}
 \caption{Performance of heuristic assignment on no-duplicate problems}
 \label{figSTable}
 \end{center}
-\end{figure}
+\end{table}
 
 This experiment shows us an interesting property of the heuristic, it seems to perform more poorly on larger instances.
-In the single assignment case the communication component between actors can be completely ignored by assigning all actors to the same processor.
+In the no-duplication case the communication component between actors can be completely ignored by assigning all actors to the same processor.
 Since this significantly reduces the assignment cost, the heuristic and optimal will typically choose this.
 However whereas the optimal is choosing the best processor for all actors, the heuristic is choosing the best processor for the first actor it finds, then assigning all other actors to that processor to avoid communication cost.
 The heuristic can be thought of as choosing an actor at random and assigning all actors to the processor that that actor happens to run best on.
 Unsurprisingly then, the heuristic is unlikely to choose this actor when there are more actors to choose from.
-Thus we see that when we only have 4-5 actors we have suboptimal heuristic assignments 16\%-25\% of the time, when we have 9-10 actors we have 37\%-50\% suboptimal heuristic assignments.
+Thus we see when we look at the Div column in Table \ref{figSTable} that when we only have 4-5 actors, we have suboptimal heuristic assignments 16\%-25\% of the time, but when we have 9-10 actors, we have 37\%-50\% suboptimal heuristic assignments.
 
 This experiment also shows an interesting property in the degree of suboptimality.
-When we look at only suboptimal assignments, we see that the optimal to heuristic ratio does not necessarily increase with problem size.
+When we look at only suboptimal assignments, although the likelyhood of a suboptimal assignment increases, we see that the optimal to heuristic ratio does not necessarily increase with problem size.
 For these experiment communication costs are both random and semi-random (certain computers are on average better), so we would expect little proportional cost increase with problem size.
-The results bear out this conjecture, so we are able to say that although the likelyhood of a suboptimal assignment increases, the suboptimality of these assignments doesnt necessarily increase with problem size.
+The results bear out this conjecture.
 
 These experiments are run on problem instances where invocation cost is modelled either totally at random, or where certain machines invoke actors generally at lower cost.
+The experiments in Table \ref{figSTable} have an equal number of both kinds of experiment.
 It is possible to devise pathological cases where the heuristic performs arbitrarily worse than the optimal, however such instances do not capture realistic problems.
 
 \subsection{Multiple Duplicate Assignments}
